tests/date/bad/rounding_option_fr.catala_fr
```catala
déclaration champ d'application Test:
  interne bday contenu date
  interne today contenu date
  résultat ambiguité contenu booléen

champ d'application Test:
  définition bday égal à |2000-02-29|
  définition today égal à |2018-03-01|
  définition ambiguité égal à bday + 18 an <= today 
```

```catala-test-inline
$ catala Interpret -s Test
[ERROR] Unexpected error: Dates_calc.Dates.AmbiguousComputation
#return code 125#
```
